@@ -45,9 +45,10 @@ extern uio_DirHandle *saveDir;
 extern uio_DirHandle *meleeDir;
 
 void prepareContentDir (const char *contentDirName, const char **addons);
-void prepareConfigDir(const char *configDirName);
-void prepareMeleeDir(void);
-void prepareSaveDir(void);
+void prepareConfigDir (const char *configDirName);
+void prepareMeleeDir (void);
+void prepareSaveDir (void);
+void initLanguage (void);
 
 #endif
 
